adiciona fucionalidade de Criar de forma unitaria e lista, leitura d um item ou todos os itens da formula e tambbem deleta e altera